--- a/ElmaTestWork_2/Views/Document/Create.cshtml
+++ b/ElmaTestWork_2/Views/Document/Create.cshtml
@@ -5,7 +5,7 @@
 <h4 class="text-center">@ViewBag.Title</h4>
 <div class="row">
     <div class="col-xs-offset-1">
-        @using (Html.BeginForm("Create", "Document", null, FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal", role = "form" }))
+        @using (Html.BeginForm("Create", "Document", null, FormMethod.Post, new { id="formCreate",enctype="multipart/form-data",@class="form-horizontal",role="form" }))
         {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true)
@@ -21,11 +21,13 @@
                 <div class="col-xs-11">
                     @Html.LabelFor(model => model.Date)
                     <input type="date" id="Date" name="Date" class="form-control"/>
+                    @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-xs-11">
-                    <input type="file" name="file" class="form-control"/>
+                    <input type="file" id="FileName" name="FileName" class="form-control"/>
+                    @Html.ValidationMessageFor(model => model.FileName, "", new { @class = "text-danger" })
                 </div>
             </div>
 
