Добавлена валидация формы на стороне клиента.

--- a/ElmaTestWork_2/Views/Document/Create.cshtml
+++ b/ElmaTestWork_2/Views/Document/Create.cshtml
@@ -26,8 +26,8 @@
             </div>
             <div class="form-group">
                 <div class="col-xs-11">
-                    <input type="file" id="FileName" name="FileName" class="form-control"/>
-                    @Html.ValidationMessageFor(model => model.FileName, "", new { @class = "text-danger" })
+                    <input type="file" id="Files" name="Files" class="form-control"/>
+                    @Html.ValidationMessageFor(model => model.Files, "", new { @class = "text-danger" })
                 </div>
             </div>
 
