--- a/ElmaTestWork_2/Views/Shared/_Layout.cshtml
+++ b/ElmaTestWork_2/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/site")
     @Scripts.Render("~/bundles/datatables")
+    <script src="~/Scripts/SiteValid.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
